welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail: error: too many arguments for method hunt: ()Unit
		hunt(getParam(0).asInstanceOf[Color]); 
                    ^SlugSnail:4: error: missing arguments for method isFacingTrail in class SlugSnail;
follow this method with `_' if you want to treat it as a partially applied function
    	if (isFacingTrail == true){
            ^SlugSnail:21: error: value c is not a member of object java.awt.Color
    if(getCouleurSol() == Color.c){
                                ^