welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt() {
    while (!estSurBiscuit){
    	if (isFacingTrail == true){
    		avance()
    		baisseBrosse()
    		leveBrosse()
    	}
    	else{
    		gauche()
    	}
    }
    prendBiscuit()
}

def isFacingTrail(c:Color):Boolean = {
    if(estFaceMur){
    	return false
    }
    avance()
    if(getCouleurSol() == Color.c){
    	recule()
    	return true
    }
    else{
    	recule()
    	return false
    }
}   